==> apinggithub/rtthread2.1.0sfc/bsp/stm32f407VGT6/drivers/stm32_eval_spi_sd.c <==
#include "stm32_eval_spi_sd.h"
#include <stdio.h>
#define BLOCK_SIZE    512

SD_Error SD_Init(void)
{
  uint32_t TimeOut, i = 0;
  SD_Error Status = SD_RESPONSE_NO_ERROR;
	SD_SPI_SetSpeedHigh();
  //printf("(SD Init in SPI mode)");
  //SD_LowLevel_Init(); 	    /* 初始化SPI相应管脚与处理器的SPI接口 */
  //SD_SPI_SetSpeedLow();   /* 把SPI的速度设置成低速模式 */
  	 
 /*------------使得SD卡进入SPI模式--------------*/
  TimeOut = 0; 
  do
  {   
    SD_CS_HIGH();	 /*  SD chip select high */
      
    for (i = 0; i <= 9; i++) /*  Send dummy byte 0xFF, 10 times with CS high */
    { /*  Rise CS and MOSI for 80 clocks cycles */
      /*  Send dummy byte 0xFF */
       SD_ReadByte();
    }        
	Status = SD_GoIdleState();
    if(TimeOut > 6)
    {
      break;
    }
    TimeOut++;
  }while(Status);

  //SD_SPI_SetSpeedHi();  
  return Status;
}

uint8_t SD_WriteByte(uint8_t Data)
{
	 //uint8_t recv3;
	//uint8_t send[1] = Data;
  HAL_SPI_Transmit(&hspi3,&Data,1, 100);
	//HAL_SPI_TransmitReceive(&hspi3,send,&recv3,1, 100);	
  return 0;
}

uint8_t SD_ReadByte(void)
{
	/*SD_CS_LOW();*/
  uint8_t recv3;
	uint8_t send[1] = {0xff};
  //HAL_SPI_Transmit(&hspi3,send,1, 100);
	HAL_SPI_TransmitReceive(&hspi3,send,&recv3,1, 100);	
	/*SD_CS_HIGH();*/
  return recv3;
}
